# gen-opcodes

./: README.md  gen-opcodes.cabal
resources/: MiscQuickref.html  csound-expression-opcodes-dynamic.cabal  csound-expression-opcodes-typed.cabal  csound-expression-opcodes.cabal  docs.txt
src/: Main.hs  Parse.hs  Prepare.hs  Pretty.hs  Types.hs
