Name:          csound-expression-opcodes-typed
Version:       0.0.0
Cabal-Version: >= 1.6
License:       BSD3
License-file:  LICENSE
Author:	       Anton Kholomiov
Synopsis:      opcodes for the library csound-expression-typed
Stability:     Experimental
Tested-With:   GHC==7.6
Build-Type:    Simple
Category:      Music, Sound
Maintainer:    <anton.kholomiov@gmail.com>

Description:   opcodes for the library csound-expression-typed

Library
  Ghc-Options:    -Wall
  Build-Depends:
        base >= 4, base < 5, csound-expression-typed, csound-expression-opcodes-dynamic
  Hs-Source-Dirs:      src/
  Exposed-Modules:
