Name:          csound-expression-opcodes
Version:       0.0.3.1
Cabal-Version: >= 1.6
License:       BSD3
License-file:  LICENSE
Author:	       Anton Kholomiov
Synopsis:      opcodes for the library csound-expression
Stability:     Experimental
Tested-With:   GHC==7.6
Build-Type:    Simple
Category:      Music, Sound
Maintainer:    <anton.kholomiov@gmail.com>

Description:   opcodes for the library csound-expression

Library
  Ghc-Options:    -Wall
  Build-Depends:
        base >= 4, base < 5, transformers, csound-expression-typed, csound-expression-dynamic
  Hs-Source-Dirs:      src/
  Exposed-Modules:
